@@ -1,6 +1,11 @@
+2010-01-06  Torbjorn Granlund  <tege@gmplib.org>
+
+	* mpn/generic/div_q.c: Properly handle np=scratch.  Fix critical typo
+	in final adjustment code.  Misc cleanups.
+
 2010-01-06 Marco Bodrato <bodrato@mail.dm.unipi.it>
 
-	* mpn/generic/toom8h_mul.c: Avoid overlflows of mp_size_t.
+	* mpn/generic/toom8h_mul.c: Avoid overflows of mp_size_t.
 
 2010-01-06  Torbjorn Granlund  <tege@gmplib.org>
 
